# ansible-role-virtinstall

./: .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml  tasks.yml
defaults/: main.yml
meta/: main.yml  requirements.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
molecule/tox/: molecule.yml  requirements.yml
tasks/: main.yml
templates/: virt-install.bash.j2
