[project]
name = "virtinstall"
version = "0.0.0"
description = "Ansible role for deploying libvirt guests with virt-install."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["virtinstall", "libvirt"]
repository = "https://github.com/jomrr/ansible-role-virtinstall"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
